--- a/menu.html
+++ b/menu.html
@@ -125,8 +125,9 @@ button:hover {
     <label><input type="checkbox"> Real-time 3D</label>
   </div>
 </div>
-
-<button>Continue →</button>
-
+<a href="step2.html">
+<button >Continue →</button>
+</a>
 </body>
 </html>
+
