--- a/menu.html
+++ b/menu.html
@@ -125,9 +125,10 @@ button:hover {
     <label><input type="checkbox"> Real-time 3D</label>
   </div>
 </div>
-<a href="step2.html">
+<a href="proyect description.html">
 <button >Continue →</button>
 </a>
 </body>
 </html>
+
 
