--- a/index.html
+++ b/index.html
@@ -96,10 +96,11 @@
       We build visual authority for brands that want more than decoration.
     </p>
 
-    <a href="menu.html" class="cta">View Projects</a>
+    <a href="Projects.html" class="cta">View Projects</a>
   </div>
 </section>
 
 </body>
 </html>
+
 
