--- a/Projects.html
+++ b/Projects.html
@@ -152,7 +152,7 @@ body {
 </div>
 
 <div class="footer-link">
-  <a href="#">Start a Project →</a>
+  <a href="menu.html">Start a Project →</a>
 </div>
 
 </body>
