--- a/checkout.html
+++ b/checkout.html
@@ -208,7 +208,15 @@ console.log("Email:", email);
 console.log("Total:", total);
 
 }
+/* ================================
+ACTUALIZAR AUTOMÁTICO SI CAMBIA EMAIL O DATOS
+================================ */
 
+document.addEventListener("input", function(){
+
+  calculatePrice();
+
+});
 </script>
 
 </body>
