--- a/proyect description.html
+++ b/proyect description.html
@@ -243,7 +243,7 @@ if(input.trim()===""){
 alert("Please describe your vision.");
 return;
 }
-
+localStorage.setItem("projectSelections", selections.join(", "));
 
 </script>
 
@@ -251,5 +251,6 @@ return;
 
 </body>
 </html>
+
 
 
